@@ -19,11 +19,6 @@ plugins {
     `maven-publish`
 }
 
-configure<JavaPluginExtension> {
-    sourceCompatibility = VERSION_11
-    targetCompatibility = VERSION_17
-}
-
 allprojects {
 
     apply {
@@ -63,13 +58,19 @@ allprojects {
             maxHeapSize = "3072m"
             jvmArgs = listOf(
                 "-XX:MaxHeapSize=3072m",
+                "--add-opens", "java.base/java.util.concurrent.atomic=ALL-UNNAMED",
                 "--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED",
                 "--add-opens", "java.base/java.util.concurrent=ALL-UNNAMED",
                 "--add-opens", "java.base/java.util.concurrent.locks=ALL-UNNAMED",
                 "--add-opens", "java.base/java.text=ALL-UNNAMED",
                 "--add-opens", "java.base/java.io=ALL-UNNAMED",
+                "--add-opens", "java.base/java.nio=ALL-UNNAMED",
+                "--add-opens", "java.base/java.nio.file=ALL-UNNAMED",
+                "--add-opens", "java.base/java.net=ALL-UNNAMED",
                 "--add-opens", "java.base/sun.security.util=ALL-UNNAMED",
                 "--add-opens", "java.base/sun.reflect.generics.repository=ALL-UNNAMED",
+                "--add-opens", "java.base/sun.net.util=ALL-UNNAMED",
+                "--add-opens", "java.base/sun.net.fs=ALL-UNNAMED",
                 "--add-opens", "java.base/java.security=ALL-UNNAMED",
                 "--add-opens", "java.base/java.lang.ref=ALL-UNNAMED",
                 "--add-opens", "java.base/java.math=ALL-UNNAMED",
@@ -184,7 +185,7 @@ configure(
         project(":utbot-core"),
         project(":utbot-framework"),
         project(":utbot-framework-api"),
-        project(":utbot-fuzzers"),
+        project(":utbot-java-fuzzing"),
         project(":utbot-instrumentation"),
         project(":utbot-rd"),
         project(":utbot-summary")
